Value Lookup: Overflow style issues

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -206,4 +206,22 @@ body.lang_es {
 
     }
   }
+
+
+  #ValueLookupPage {
+    .btn-toggle {
+      width: 300px;
+//      height: 36px;
+//
+//      .btn, .btn-slider {
+//        height: 36px;
+//      }
+    }
+
+    .lookup-options {
+      .well-title {
+        height: 60px;
+      }
+    }
+  }
 }
