--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -174,6 +174,17 @@ body.lang_fr_CA {
     }
   }
 
+  #ValueLookupPage {
+    .btn-toggle {
+      width: 300px;
+      height: 36px;
+
+      .btn, .btn-slider {
+        height: 36px;
+      }
+    }
+  }
+
   /* Modals */
   [name='searchControls'] > .span4 > label {
     white-space: nowrap;
